// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component DepositAgreement should have a proper style generator 1`] = `
Object {
  "checkboxChecked": Object {
    "color": "test2 !important",
  },
  "checkboxRoot": Object {
    "color": "test1",
  },
  "label": Object {
    "fontSize": 16,
    "fontWeight": 300,
    "lineHeight": "24px",
    "textAlign": "justify",
  },
  "root": Object {
    "alignItems": "flex-start",
    "margin": 0,
  },
}
`;

exports[`Component DepositAgreement should have a proper style generator 2`] = `
Object {
  "checkboxChecked": Object {
    "color": "",
  },
  "checkboxRoot": Object {
    "color": "",
  },
  "label": Object {
    "fontSize": 16,
    "fontWeight": 300,
    "lineHeight": "24px",
    "textAlign": "justify",
  },
  "root": Object {
    "alignItems": "flex-start",
    "margin": 0,
  },
}
`;

exports[`Component DepositAgreement should render checked if deposit agreement accepted 1`] = `
<WithStyles(WithFormControlContext(FormControlLabel))
  classes={
    Object {
      "root": undefined,
    }
  }
  control={
    <WithStyles(Checkbox)
      checked={true}
      classes={
        Object {
          "checked": undefined,
          "root": undefined,
        }
      }
      id="deposit-agreement"
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <WithStyles(Typography)
      classes={
        Object {
          "root": "",
        }
      }
      color="secondary"
      component="div"
    >
      test deposit agreement
    </WithStyles(Typography)>
  }
/>
`;

exports[`Component DepositAgreement should render default view 1`] = `
<WithStyles(WithFormControlContext(FormControlLabel))
  classes={
    Object {
      "root": undefined,
    }
  }
  control={
    <WithStyles(Checkbox)
      checked={false}
      classes={
        Object {
          "checked": undefined,
          "root": undefined,
        }
      }
      id="deposit-agreement"
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <WithStyles(Typography)
      classes={
        Object {
          "root": "",
        }
      }
      color="error"
      component="div"
    >
      test deposit agreement
    </WithStyles(Typography)>
  }
/>
`;
